--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -1,3 +1,11 @@
+<script type="text/javascript">
+  var paymentData = {
+      preferenceId: '{{ preferenceId }}'
+  };
+</script>
+
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <div class="as-search-wrapper" role="main">
     <div class="as-navtuck-wrapper">
@@ -40,8 +48,8 @@
 
                     </div>
                 </div>
-                <div class="as-accessories-results  as-search-desktop">
-                    <div class="width:60%">
+                <div class="product-details as-accessories-results  as-search-desktop">
+                    <div>
                         <div class="as-producttile-tilehero with-paddlenav " style="float:left;">
                             <div class="as-dummy-container as-dummy-img">
 
@@ -54,7 +62,7 @@
                                     <div class="clearfix image-list xs-no-js as-util-relatedlink relatedlink" data-relatedlink="6|Powerbeats3 Wireless Earphones - Neighborhood Collection - Brick Red|MPXP2">
                                         <div class="as-tilegallery-element as-image-selected">
                                             <div class=""></div>
-                                            <img src="./assets/003.jpg" class="ir ir item-image as-producttile-image" alt="" width="445" height="445" style="content:-webkit-image-set(url({{ img }}) 2x);">
+                                            <img src="./assets/003.jpg" class="ir ir item-image as-producttile-image" alt="" width="445" height="445" style="content:-webkit-image-set(url({{ product.img }}) 2x);">
                                         </div>
                                         
                                     </div>
@@ -72,19 +80,21 @@
                                 <div class="as-producttile-title">
                                     <h3 class="as-producttile-name">
                                         <p class="as-producttile-tilelink">
-                                            <span data-ase-truncate="2"> {{ title }} </span>
+                                            <span data-ase-truncate="2"> {{ product.title }} </span>
                                         </p>
 
                                     </h3>
                                 </div>
                                 <h3 >
-                                    {{ price }}
+                                    {{ product.price }}
                                 </h3>
                                 <h3 >
-                                    {{ unit }}
+                                    {{ product.unit }}
                                 </h3>
                             </div>
-                            <button type="submit" class="mercadopago-button" formmethod="post">Pagar</button>
+                            
+                            <div class="mercadopago-button"></div>
+                            
                         </div>
                     </div>
                 </div>
