fix: security script

--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -1,8 +1,12 @@
+
+    <script src="https://www.mercadopago.com/v2/security.js" view="item"></script>
+
 <script type="text/javascript">
   var paymentData = {
       preferenceId: '{{ preferenceId }}'
   };
 </script>
+
 
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
